--- a/index.html
+++ b/index.html
@@ -79,24 +79,8 @@
   <div id="content">
 
     <div style="text-align:center;padding-top:0px;padding-bottom:20px">
-      <h2> Heilbronn Research Fellow </h2>
       <div style="font-size:110%;padding-top:5px;padding-bottom:20px;"> 
-      <b>University of Bristol</b> <br>
-      </div>
-
-      <img src="images/scott_web.jpg" alt="Scott" id="im1">
-      <img src="images/a5_web.png" alt="Alt(5)" id="im2">
-      <img src="images/bristol_web.png" alt="Bristol" id="im3">
-      <br>
-
-      <div style="display:inline-block;padding-top:10px;padding-bottom:10px">
-        <i> &ldquo;Symmetry is a vast subject, significant in art and nature. Mathematics lies at its root and it would be hard to find a better one on which to demonstrate the working of mathematical intellect.&rdquo;</i> Hermann Weyl
-      </div>
-    </div>
-
-   
-
-  </div>
+      <b>University of Bristol</b>
 
 
   <div id="contact">
@@ -141,8 +125,8 @@
 
   <div id="footer">
     <ul>
-      <li> &copy; Scott Harper 2021 </li>
-      <li> Last updated: 10th March 2021 </li>
+      <li> &copy; Hong Yi Huang 2021 </li>
+      <li> Last updated: 16th September 2021 </li>
     </ul>
   </div>
 
