--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
              gen_mail_to_link('scott.harper','bristol.ac.uk','')
           </script>
           <noscript>
-             scott [dot] harper [at] <br> bristol [dot] ac [dot] uk
+             hy [dot] huang [at] <br> bristol [dot] ac [dot] uk
           </noscript>
         </p>
       </li>
@@ -114,9 +114,8 @@
         </p>
         <p style="padding:0px">
         <h4> Links </h4>
-          <a href="http://arxiv.org/">arXiv</a> <b>|</b> <a href="https://arxiv.org/a/harper_s_1">me</a> <br>
-          <a href="http://www.ams.org/mathscinet/">MathSciNet</a> <b>|</b> <a href="https://mathscinet.ams.org/mathscinet/search/author.html?mrauthid=1229326">me</a> <br>
-          <a href="https://orcid.org/">ORCID</a> <b>|</b> <a href="https://orcid.org/0000-0002-0056-2914">me</a>
+          <a href="http://arxiv.org/">arXiv</a> <b>|</b> <a href="https://arxiv.org/a/huang_h_8.html">me</a> <br>
+          <a href="https://orcid.org/">ORCID</a> <b>|</b> <a href="https://orcid.org/0000-0003-1457-1026">me</a>
         </p>
       </li>
     </ul>
