--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <meta name="viewport" content="width=250">
 
-  <link href="sharperstyle.css`" rel="stylesheet" type="text/css">
+  <link href="sharperstyle.css" rel="stylesheet" type="text/css">
 
  
 
