--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <p>
         <h4> Email Address </h4>
           <script language="JavaScript" type="text/javascript">
-             gen_mail_to_link('scott.harper','bristol.ac.uk','')
+             gen_mail_to_link('hy.huang','bristol.ac.uk','')
           </script>
           <noscript>
              hy [dot] huang [at] <br> bristol [dot] ac [dot] uk
