--- a/research.html
+++ b/research.html
@@ -1,1 +1,51 @@
 
+<!DOCTYPE html>
+<html lang="en-GB">
+  
+<head>
+
+  <title>
+    Hong Yi Huang
+  </title>
+
+  <meta charset="UTF-8">
+
+  <meta name="author" content="Hong Yi Huang">
+
+  <meta name="viewport" content="width=250">
+
+  <link href="sharperstyle.css" rel="stylesheet" type="text/css">
+
+ 
+
+  <script type="text/javascript">
+    function gen_mail_to_link(lhs,rhs,subject) {
+      document.write("<a href=\"mailto");
+      document.write(":" + lhs + "@");
+      document.write(rhs + "?subject=" + subject + "\">" + lhs + "@" + rhs + "<\/a>");
+    }
+  </script>
+
+</head>
+
+
+
+<body>
+  
+  
+
+  <div id="header">
+    <h1> <a href="index.html">Hong Yi Huang</a> </h1>
+  </div>
+
+
+  <div id="nav">
+    <ul>
+      <li> <a href="index.html">Homepage</a> <br>
+        <a href="talks.html">Talks</a> </li>
+      <li> <a href="research.html">Research</a> <br>
+           <a href="outreach.html">Outreach</a> </li>
+      <li> <a href="publications.html">Publications</a> <br>
+           <a href="visits.html">Visits</a> </li>
+    </ul>
+  </div>
