--- a/index.html
+++ b/index.html
@@ -39,14 +39,13 @@
   </div>
 
 
-  <div id="nav">
+ <div id="nav">
     <ul>
-      <li> <a href="index.html">Homepage</a> <br>
-        <a href="talks.html">Talks</a> </li>
-      <li> <a href="research.html">Research</a> <br>
-           <a href="outreach.html">Outreach</a> </li>
-      <li> <a href="publications.html">Publications</a> <br>
-           <a href="visits.html">Visits</a> </li>
+      <li> <a href="index.html">Homepage</a>  </li>
+      <li> <a href="research.html">Research</a>  </li>
+      <li> <a href="teaching.html">Teaching</a>  </li>
+      <li> <a href="meeting&visits.html">Meeting & Visits</a>  </li>
+      <li> <a href="talks.html">Talks</a>  </li>
     </ul>
   </div>
 
