--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
         </p>
         <p style="padding:0px">
         <h4> Links </h4>
-          <a href="https://arxiv.org/a/huang_h_8.html">arXiv</a> 
-          <a href="https://orcid.org/0000-0003-1457-1026">ORCID</a>
-          <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=RHJOsxEAAAAJ">Google Scholar</a> 
-          <a href="https://www.researchgate.net/profile/Hong-Yi-Huang-4">Researchgate</a>
+          <a href="https://arxiv.org/a/huang_h_8.html">arXiv</a> <br>
+          <a href="https://orcid.org/0000-0003-1457-1026">ORCID</a> <br>
+          <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=RHJOsxEAAAAJ">Google Scholar</a>  <br>
+          <a href="https://www.researchgate.net/profile/Hong-Yi-Huang-4">Researchgate</a> <br>
           <a href="https://mathoverflow.net/users/131819/hongyi-huang">MathOverflow</a>
         </p>
       </li>
