--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 
     <div style="text-align:center;padding-top:0px;padding-bottom:20px">
       <div style="font-size:110%;padding-top:5px;padding-bottom:20px;"> 
-      <b>University of Bristol</b>
+      Currently, I'm a postgraduate researcher (PhD student) at the University of Bristol under the supervision of <a href="https://seis.bristol.ac.uk/~tb13602/">Professor Tim Burness</a> and supported by China Scholarship Council. My main interest of research is in group theory, especially in permutation groups and related structures in combinatorics.
+
 
 
   <div id="contact">
