--- a/research.html
+++ b/research.html
@@ -48,5 +48,13 @@
       <li> <a href="talks.html">Talks</a>  </li>
     </ul>
   </div>
+  
+  <div id="content">
+
+    <h2> Research interests </h2>
+    
+    <p> My main interest of research is in group theory, mostly finite groups. I have a particular interest in permutation groups, as well as some related structures in combinatorics (e.g. transitive graphs). I'm also interested in finite simple groups, especially their subgroup structures and conjugacy classes. </p>
+    
+  </div>
 
   </body>
