--- a/research.html
+++ b/research.html
@@ -66,11 +66,11 @@
         <ol>
           <li> On the Saxl graphs of primitive groups with soluble stabilisers <br>
               joint with T.C. Burness <br>
-                submitted, arXiv:2105.11861
+                submitted, arXiv:2105.11861 <br>
                 <a href="https://arxiv.org/abs/2105.11861">arXiv</a> </li>
           <li> On valency problems of Saxl graphs <br>
               joint with J. Chen <br>
-                submitted, arXiv:2012.13747
+                submitted, arXiv:2012.13747 <br>
                 <a href="https://arxiv.org/abs/2012.13747">arXiv</a> </li>
           </ol>
   </div>
