--- a/talks.html
+++ b/talks.html
@@ -33,7 +33,7 @@
   <body>
     
     <div id="header">
-    <h1> <a href="index.html">Hong Yi Huang</a> </h1>
+    <h1> Hong Yi Huang </h1>
   </div>
 
 
