--- a/index.html
+++ b/index.html
@@ -56,6 +56,20 @@
       <p> 
         Currently, I'm a postgraduate researcher (PhD student) at the University of Bristol under the supervision of <a href="https://seis.bristol.ac.uk/~tb13602/">Professor Tim Burness</a> and supported by <a href="https://www.bristol.ac.uk/students/support/finances/scholarships/china-scholarship-council/">China Scholarship Council</a>. My main interest of research is in group theory, especially in permutation groups and related structures in combinatorics.
         </p>
+    
+    <h2> Education </h2>
+    
+    <p>
+      <div class="list">
+        <ul>
+          <li> January 2021 -- present: PhD in Mathematics, University of Bristol (UoB), UK <br>
+            Supervisor: Professor Tim Burness </li>
+          <li> September 2016 -- July 2021: Bachelor of Science, Southern University of Science and Technology 南方科技大学 (SUSTech), China <br>
+            Supervisor: Professor Cai Heng Li and Professor Anyue Chen <br>
+            Thesis: On valency problems of Saxl graphs of almost simple primitive groups with soluble stabiliser
+        </ul>
+    </div>
+    </p>
 
 
   <div id="contact">
