--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     <p>
       <div class="list">
         <ul>
-          <li> January 2021 -- present: PhD in Mathematics, University of Bristol (UoB), UK <br>
+          <li> January 2021 -- present: PhD in Mathematics, <b>University of Bristol (UoB)</b>, UK <br>
             Supervisor: Professor Tim Burness </li>
-          <li> September 2016 -- July 2021: Bachelor of Science, Southern University of Science and Technology 南方科技大学 (SUSTech), China <br>
+          <li> September 2016 -- July 2021: Bachelor of Science, <b>Southern University of Science and Technology 南方科技大学 (SUSTech)</b>, China <br>
             Supervisor: Professor Cai Heng Li and Professor Anyue Chen <br>
             Thesis: On valency problems of Saxl graphs of almost simple primitive groups with soluble stabiliser
         </ul>
