--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             PhD in Mathematics <br>
             Supervisor: Professor Tim Burness </li>
           <li> September 2016 -- July 2021<br>
-            <b>Southern University of Science and Technology</b> 南方科技大学 (SUSTech), China <br>
+            <b>Southern University of Science and Technology</b> (SUSTech), China <br>
             Bachelor of Science <br>
             Supervisor: Professor Cai Heng Li and Professor Anyue Chen <br>
             Thesis: On valency problems of Saxl graphs of almost simple primitive groups with soluble stabiliser
