--- a/index.html
+++ b/index.html
@@ -74,6 +74,27 @@
         </ul>
     </div>
     </p>
+  
+  <h2> Distinctions </h2>
+  
+  <p>
+      <div class="list">
+        <ul>
+          <li> 2021--25 <br>
+            <b>China Scholarship Council</b> <br>
+            UoB </li>
+          <li> 2020 <br>
+            <b>Outstanding undergraduate thesis</b> <br>
+            SUSTech </li>
+          <li> 2017--18 <br>
+            <b>First class scholarship</b> <br>
+            SUSTech </li>
+          <li> 2017 <br>
+            <b>First prize</b> <br>
+            Chinese Mathematics Competition (Guangdong) </li>
+          </ul>
+    </div>
+    </p>
 
 
   <div id="contact">
