--- a/index.html
+++ b/index.html
@@ -80,17 +80,13 @@
   <p>
       <div class="list">
         <ul>
-          <li> 2021--25 <br>
-            <b>China Scholarship Council</b> <br>
+          <li> 2021--25: <b>China Scholarship Council</b> <br>
             UoB </li>
-          <li> 2020 <br>
-            <b>Outstanding undergraduate thesis</b> <br>
+          <li> 2020: <b>Outstanding undergraduate thesis</b> <br>
             SUSTech </li>
-          <li> 2017--18 <br>
-            <b>First class scholarship</b> <br>
+          <li> 2017--18: <b>First class scholarship</b> <br>
             SUSTech </li>
-          <li> 2017 <br>
-            <b>First prize</b> <br>
+          <li> 2017: <b>First prize</b> <br>
             Chinese Mathematics Competition (Guangdong) </li>
           </ul>
     </div>
