--- a/talks.html
+++ b/talks.html
@@ -56,13 +56,13 @@
       <p>
      <div class="list">
        <ul>
-       <li> 21st May: <b> Groups, graphs and transitivity </b> <br>
+       <li> 21st May: <b> Groups, graphs and transitivity </b> (<a href="Transitive graphs_210521.pdf">slides</a>) <br>
               Junior Algebra Colloquium, UoB </li>
-       <li> 22nd April: <b> The probabilistic method in group theory </b> <br>
+       <li> 22nd April: <b> The probabilistic method in group theory </b> (<a href="Prob_210422.pdf">slides</a>) <br>
               Discrete Mathematics Seminar, SUSTech </li>
-       <li> 11 March and 8th April: <b> Simple groups, fixed point ratios and applications (I and II) </b> <br>
+       <li> 11 March and 8th April: <b> Simple groups, fixed point ratios and applications (I and II) </b> (<a href="Fixed point ratios.pdf">slides I</a> <b> | </b> <a href="fpr2.pdf">slides II</a>) <br>
               Seminar on Classical Groups, SUSTech </li>
-       <li> 2nd January: <b> On valency problems of Saxl graphs </b> <br>
+       <li> 2nd January: <b> On valency problems of Saxl graphs </b> (<a href="ValSaxl_Talk_210102.pdf">slides</a>) <br>
               Workshop on Group Actions and Transitive Graphs, Kunming, China </li>
        </ul>
       </div>
@@ -72,9 +72,9 @@
     <p>
       <div class="list">
         <ul>
-        <li> 26th November: <b> On valency problems of Saxl graphs </b> <br>
+          <li> 26th November: <b> On valency problems of Saxl graphs </b> (<a href="ValSaxl_Talk_201126.pdf">slides</a>) <br>
           Discrete Mathematics Seminar, SUSTech </li>
-        <li> 17th November: <b> On valency problems of Saxl graphs </b> <br>
+          <li> 17th November: <b> On valency problems of Saxl graphs </b> (<a href="ValSaxl_Talk_201117.pdf">slides</a>) <br>
           SUSTech </li>
         </ul>
     </div>
