--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <b>Southern University of Science and Technology</b> (SUSTech), China <br>
             Bachelor of Science <br>
             Supervisor: Professor Cai Heng Li and Professor Anyue Chen <br>
-            Thesis: On valency problems of Saxl graphs of almost simple primitive groups with soluble stabiliser
+            Thesis: On valency problems of Saxl graphs of almost simple primitive groups with soluble stabiliser (<a href="On Valency Problems of Saxl Graphs of Almost Simple Primitive Groups with Soluble Stabilise.pdf"pdf</a>)
         </ul>
     </div>
     </p>
