--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
           <li> January 2021 -- present<br>
             <b>University of Bristol</b> (UoB), UK <br>
             PhD in Mathematics <br>
-            Supervisor: Professor Tim Burness </li>
+            Supervisor: <a href="https://seis.bristol.ac.uk/~tb13602/">Professor Tim Burness</a> </li>
           <li> September 2016 -- July 2021<br>
             <b>Southern University of Science and Technology</b> (SUSTech), China <br>
             Bachelor of Science <br>
-            Supervisor: Professor Cai Heng Li and Professor Anyue Chen <br>
+            Supervisor: <a href="https://research-repository.uwa.edu.au/en/persons/cai-heng-li">Professor Cai Heng Li</a> and <a href="https://www.liverpool.ac.uk/mathematical-sciences/staff/anyue-chen/">Professor Anyue Chen</a> <br>
             Thesis: On valency problems of Saxl graphs of almost simple primitive groups with soluble stabiliser (<a href="On Valency Problems of Saxl Graphs of Almost Simple Primitive Groups with Soluble Stabilise.pdf">pdf</a>)
         </ul>
     </div>
