--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
     </div>
     </p>
   
-  <h2> Contact me </h2>
-  <br>
+  <div id="contact">
   <p> Email: <script language="JavaScript" type="text/javascript">
              gen_mail_to_link('hy.huang','bristol.ac.uk','')
           </script>
@@ -105,7 +104,7 @@
   <p> Institution: School of Mathematics, University of Bristol, Bristol BS8 1UG, UK </p>
   <p> Office: 1.17 Fry Building, Bristol BS8 1UG, UK </p>
   <p> Accounts: <a href="https://arxiv.org/a/huang_h_8.html">arXiv</a>, <a href="https://orcid.org/0000-0003-1457-1026">ORCID</a>, <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=RHJOsxEAAAAJ">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Hong-Yi-Huang-4">Researchgate</a>, <a href="https://mathoverflow.net/users/131819/hongyi-huang">MathOverflow</a>, <a href="https://www.chess.com/member/huanghongyi">chess.com</a>
-
+  </div>
 
   
 
