--- a/research.html
+++ b/research.html
@@ -64,11 +64,11 @@
     <p>
         <div class="desc">
         <ol>
-          <li> On valency problems of Saxl graphs <br>
+          <li> <i>On valency problems of Saxl graphs</i> <br>
               joint with J. Chen <br>
                 submitted, arXiv:2012.13747 <br>
                 <a href="https://arxiv.org/abs/2012.13747">arXiv</a> </li>
-          <li> On the Saxl graphs of primitive groups with soluble stabilisers <br>
+          <li> <i>On the Saxl graphs of primitive groups with soluble stabilisers</i> <br>
               joint with T.C. Burness <br>
                 submitted, arXiv:2105.11861 <br>
                 <a href="https://arxiv.org/abs/2105.11861">arXiv</a> </li>
