--- a/talks.html
+++ b/talks.html
@@ -59,7 +59,8 @@
        <li> 21st May: <b> Groups, graphs and transitivity </b> (<a href="Transitive graphs_210521.pdf">slides</a>) <br>
               Junior Algebra Colloquium, UoB </li>
        <li> 22nd April: <b> The probabilistic method in group theory </b> (<a href="Prob_210422.pdf">slides</a>) <br>
-              Discrete Mathematics Seminar, SUSTech </li>
+              Discrete Mathematics Seminar, SUSTech <br>
+              (This is also the third part of the following talk.)</li>
        <li> 11 March and 8th April: <b> Simple groups, fixed point ratios and applications (I and II) </b> (<a href="Fixed point ratios.pdf">slides I</a> and <a href="fpr2.pdf">slides II</a>) <br>
               Seminar on Classical Groups, SUSTech </li>
        <li> 2nd January: <b> On valency problems of Saxl graphs </b> (<a href="ValSaxl_Talk_210102.pdf">slides</a>) <br>
