--- a/talks.html
+++ b/talks.html
@@ -61,7 +61,7 @@
        <li> 22nd April: <b> The probabilistic method in group theory </b> (<a href="Prob_210422.pdf">slides</a>) <br>
               Discrete Mathematics Seminar, SUSTech <br>
               (This is also the third part of the following talk.)</li>
-       <li> 11 March and 8th April: <b> Simple groups, fixed point ratios and applications (I and II) </b> (<a href="Fixed point ratios.pdf">slides I</a> and <a href="fpr2.pdf">slides II</a>) <br>
+       <li> 11th March and 8th April: <b> Simple groups, fixed point ratios and applications (I and II) </b> (<a href="Fixed point ratios.pdf">slides I</a> and <a href="fpr2.pdf">slides II</a>) <br>
               Seminar on Classical Groups, SUSTech </li>
        <li> 2nd January: <b> On valency problems of Saxl graphs </b> (<a href="ValSaxl_Talk_210102.pdf">slides</a>) <br>
               Workshop on Group Actions and Transitive Graphs, Kunming, China </li>
