--- a/teaching.html
+++ b/teaching.html
@@ -57,10 +57,10 @@
       <p>
       <div class="list">
         <ul>
-          <li> 2021--22 TB1: MATH10010 Introduction to Proofs and Group Theory, UoB </li>
-          <li> 2019--20 Spring: MA109 Advanced Linear Algebra, SUSTech </li>
-          <li> 2019--20 Fall: MA107 Advanced Linear Algebra I, SUSTech </li>
-          <li> 2018--19 Spring: MA104b Linear Algebra II, SUSTech </li>
+          <li> 2021/22 TB1: MATH10010 Introduction to Proofs and Group Theory, UoB </li>
+          <li> 2019/20 Spring: MA109 Advanced Linear Algebra, SUSTech </li>
+          <li> 2019/20 Fall: MA107 Advanced Linear Algebra I, SUSTech </li>
+          <li> 2018/19 Spring: MA104b Linear Algebra II, SUSTech </li>
           </ul>
     </div>
     </p>
@@ -72,10 +72,10 @@
     <p>
       <div class="list">
         <ul>
-          <li> 2020--21 Spring: MA321 Group Representation Theory, and MA219-16 Elementary Number Theory, SUSTech </li>
-          <li> 2019--20 Fall: MA321 Group Representation Theory, and MA219 Abstract Algebra (H), SUSTech </li>
-          <li> 2018--19 Spring: MAT8010 Combinatorics (PG), SUSTech </li>
-          <li> 2018--19 Fall: MA219-16 Elementary Number Theory, and MA213-16 Mathematical Analysis, SUSTech </li>
+          <li> 2020/21 Spring: MA321 Group Representation Theory, and MA219-16 Elementary Number Theory, SUSTech </li>
+          <li> 2019/20 Fall: MA321 Group Representation Theory, and MA219 Abstract Algebra (H), SUSTech </li>
+          <li> 2018/19 Spring: MAT8010 Combinatorics (PG), SUSTech </li>
+          <li> 2018/19 Fall: MA219-16 Elementary Number Theory, and MA213-16 Mathematical Analysis, SUSTech </li>
           </ul>
     </div>
     </p>
