--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
   </div>
   
   <div id="content">
-      <p> <i>Email:</i> <script language="JavaScript" type="text/javascript">
+      <p> <b>Email:</b> <script language="JavaScript" type="text/javascript">
              gen_mail_to_link('hy.huang','bristol.ac.uk','')
           </script>
           <noscript>
              hy [dot] huang [at] <br> bristol [dot] ac [dot] uk
     </noscript> </p>
-    <p> <i>Name in Chinese:</i> 黄弘毅 </p>
-    <p> <i>Peferred contact name:</i> Hongyi (he/him) </p>
-    <p> <i>Address:</i> School of Mathematics, University of Bristol, Bristol BS8 1UG, UK </p>
-    <p> <i>Office:</i> 1.17 Fry Building, Bristol BS8 1UG, UK </p>
-    <p> <i>Accounts:</i> <a href="https://arxiv.org/a/huang_h_8.html">arXiv</a>, <a href="https://orcid.org/0000-0003-1457-1026">ORCID</a>, <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=RHJOsxEAAAAJ">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Hong-Yi-Huang-4">Researchgate</a>, <a href="https://mathoverflow.net/users/131819/hongyi-huang">MathOverflow</a>
+    <p> <b>Name in Chinese:</b> 黄弘毅 </p>
+    <p> <b>Peferred contact name:</b> Hongyi (he/him) </p>
+    <p> <b>Address:</b> School of Mathematics, University of Bristol, Bristol BS8 1UG, UK </p>
+    <p> <b>Office:</b> 1.17 Fry Building, Bristol BS8 1UG, UK </p>
+    <p> <b>Accounts:</b> <a href="https://arxiv.org/a/huang_h_8.html">arXiv</a>, <a href="https://orcid.org/0000-0003-1457-1026">ORCID</a>, <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=RHJOsxEAAAAJ">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Hong-Yi-Huang-4">Researchgate</a>, <a href="https://mathoverflow.net/users/131819/hongyi-huang">MathOverflow</a>
   </div>
 
   
