--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
           </script>
           <noscript>
              hy [dot] huang [at] <br> bristol [dot] ac [dot] uk
-    </noscript> </p>
-    <p> <b>Name in Chinese:</b> 黄弘毅 </p>
-    <p> <b>Peferred contact name:</b> Hongyi (he/him) </p>
-    <p> <b>Address:</b> School of Mathematics, University of Bristol, Bristol BS8 1UG, UK </p>
-    <p> <b>Office:</b> 1.17 Fry Building, Bristol BS8 1UG, UK </p>
-    <p> <b>Accounts:</b> <a href="https://arxiv.org/a/huang_h_8.html">arXiv</a>, <a href="https://orcid.org/0000-0003-1457-1026">ORCID</a>, <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=RHJOsxEAAAAJ">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Hong-Yi-Huang-4">Researchgate</a>, <a href="https://mathoverflow.net/users/131819/hongyi-huang">MathOverflow</a>
+    </noscript> <br>
+        <b>Name in Chinese:</b> 黄弘毅 <br>
+        <b>Peferred contact name:</b> Hongyi (he/him) <br>
+        <b>Address:</b> School of Mathematics, University of Bristol, Bristol BS8 1UG, UK <br>
+        <b>Office:</b> 1.17 Fry Building, Bristol BS8 1UG, UK <br>
+        <b>Accounts:</b> <a href="https://arxiv.org/a/huang_h_8.html">arXiv</a>, <a href="https://orcid.org/0000-0003-1457-1026">ORCID</a>, <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=RHJOsxEAAAAJ">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Hong-Yi-Huang-4">Researchgate</a>, <a href="https://mathoverflow.net/users/131819/hongyi-huang">MathOverflow</a>
   </div>
 
   
