--- a/teaching.html
+++ b/teaching.html
@@ -57,7 +57,7 @@
       <p>
       <div class="list">
         <ul>
-          <li> 2021/22 TB1: MATH10010 Introduction to Proofs and Group Theory, UoB </li>
+          <li> 2021/22 TB1: MATH10010 Introduction to Proofs, UoB </li>
           <li> 2019/20 Spring: MA109 Advanced Linear Algebra, SUSTech </li>
           <li> 2019/20 Fall: MA107 Advanced Linear Algebra I, SUSTech </li>
           <li> 2018/19 Spring: MA104b Linear Algebra II, SUSTech </li>
