--- a/visits.html
+++ b/visits.html
@@ -72,6 +72,8 @@
     <p>
       <div class="list">
         <ul>
+          <li> November 2021: Groups and Graphs (online) <br>
+            SUSTech, Shenzhen, China </li>
           <li> May 2021: Workshop on Sino-German Cooperation Projects in Combinatorics <br>
             SUSTech, Shenzhen, China </li>
           <li> January 2021: Workshop on Group Actions and Transitive Graphs <br>
