--- a/visits.html
+++ b/visits.html
@@ -72,7 +72,7 @@
     <p>
       <div class="list">
         <ul>
-          <li> November 2021: Groups and Graphs (online) <br>
+          <li> November 2021: Groups, Graphs and Combinatorics (online) <br>
             SUSTech, Shenzhen, China </li>
           <li> May 2021: Workshop on Sino-German Cooperation Projects in Combinatorics <br>
             SUSTech, Shenzhen, China </li>
