--- a/visits.html
+++ b/visits.html
@@ -72,6 +72,8 @@
     <p>
       <div class="list">
         <ul>
+          <li> December 2021: 43rd Australasian Combinatorics Conference (online) <br>
+            University of Melbourne, Australia </li>
           <li> November 2021: Groups, Graphs and Combinatorics (online) <br>
             SUSTech, Shenzhen, China </li>
           <li> May 2021: Workshop on Sino-German Cooperation Projects in Combinatorics <br>
