--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <li> September 2016 -- July 2020<br>
             <b>Southern University of Science and Technology</b> (SUSTech), China <br>
             Bachelor of Science <br>
-            Supervisors: <a href="https://research-repository.uwa.edu.au/en/persons/cai-heng-li">Professor Cai Heng Li</a> and <a href="https://www.liverpool.ac.uk/mathematical-sciences/staff/anyue-chen/">Professor Anyue Chen</a> <br>
+            Advisers: <a href="https://research-repository.uwa.edu.au/en/persons/cai-heng-li">Professor Cai Heng Li</a> and <a href="https://www.liverpool.ac.uk/mathematical-sciences/staff/anyue-chen/">Professor Anyue Chen</a> <br>
             Thesis: On valency problems of Saxl graphs of almost simple primitive groups with soluble stabiliser (<a href="On Valency Problems of Saxl Graphs of Almost Simple Primitive Groups with Soluble Stabilise.pdf">pdf</a>)
         </ul>
     </div>
