--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
   <p>
       <div class="list">
         <ul>
+          <li> 2021--22: <b>Member</b> <br>
+            Combinatorial Mathematics Society of Australasia </li>
           <li> 2021--25: <b>China Scholarship Council</b> <br>
             UoB </li>
           <li> 2020: <b>Outstanding undergraduate thesis</b> <br>
