--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="list">
         <ul>
           <li> 2021--22: <b>Member</b> <br>
-            Combinatorial Mathematics Society of Australasia </li>
+            <a href="http://combinatorics-australasia.org/">Combinatorial Mathematics Society of Australasia</a> </li>
           <li> 2021--25: <b>China Scholarship Council</b> <br>
             UoB </li>
           <li> 2020: <b>Outstanding undergraduate thesis</b> <br>
