--- a/talks.html
+++ b/talks.html
@@ -58,6 +58,8 @@
       <p>
      <div class="list">
        <ul>
+         <li> 8nd November: <b> On the Saxl graph of primitive groups </b> <br>
+           LMS Graduate Student Meeting Winter 2021 </li>
        <li> 21st May: <b> Groups, graphs and transitivity </b> (<a href="Transitive graphs_210521.pdf">slides</a>) <br>
               Junior Algebra Colloquium, UoB </li>
        <li> 22nd April: <b> The probabilistic method in group theory </b> (<a href="Prob_210422.pdf">slides</a>) <br>
