--- a/visits.html
+++ b/visits.html
@@ -77,7 +77,7 @@
           <li> November 2021: Groups, Graphs and Combinatorics (online) <br>
             SUSTech, Shenzhen, China </li>
           <li> November 2021: <a href="https://www.lms.ac.uk/civicrm/event/info?id=62&reset=1">LMS Graduate Student Meeting Winter 2021</a> (online) <br>
-            London Mathematical Society </li>
+            London Mathematical Society, UK </li>
           <li> May 2021: Workshop on Sino-German Cooperation Projects in Combinatorics <br>
             SUSTech, Shenzhen, China </li>
           <li> January 2021: Workshop on Group Actions and Transitive Graphs <br>
