--- a/visits.html
+++ b/visits.html
@@ -72,12 +72,12 @@
     <p>
       <div class="list">
         <ul>
-          <li> December 2021: 43rd Australasian Combinatorics Conference (online) <br>
-            University of Melbourne, Australia </li>
-          <li> November 2021: Groups, Graphs and Combinatorics (online) <br>
-            SUSTech, Shenzhen, China </li>
-          <li> November 2021: <a href="https://www.lms.ac.uk/civicrm/event/info?id=62&reset=1">LMS Graduate Student Meeting Winter 2021</a> (online) <br>
-            London Mathematical Society, UK </li>
+          <li> December 2021: 43rd Australasian Combinatorics Conference <br>
+            University of Melbourne, Australia (online)</li>
+          <li> November 2021: Groups, Graphs and Combinatorics <br>
+            SUSTech, Shenzhen, China (online) </li>
+          <li> November 2021: LMS Graduate Student Meeting Winter 2021 (<a href="https://www.lms.ac.uk/civicrm/event/info?id=62&reset=1">link</a>) <br>
+            London Mathematical Society, UK (online) </li>
           <li> May 2021: Workshop on Sino-German Cooperation Projects in Combinatorics <br>
             SUSTech, Shenzhen, China </li>
           <li> January 2021: Workshop on Group Actions and Transitive Graphs <br>
