--- a/visits.html
+++ b/visits.html
@@ -72,21 +72,21 @@
     <p>
       <div class="list">
         <ul>
-          <li> December 2021: 43rd Australasian Combinatorics Conference <br>
+          <li> December 2021: <b>43rd Australasian Combinatorics Conference</b> <br>
             University of Melbourne, Australia (online)</li>
-          <li> November 2021: Groups, Graphs and Combinatorics <br>
+          <li> November 2021: <b>Groups, Graphs and Combinatorics</b> <br>
             SUSTech, Shenzhen, China (online) </li>
-          <li> November 2021: LMS Graduate Student Meeting Winter 2021 (<a href="https://www.lms.ac.uk/civicrm/event/info?id=62&reset=1">link</a>) <br>
+          <li> November 2021: <b>LMS Graduate Student Meeting Winter 2021</b> (<a href="https://www.lms.ac.uk/civicrm/event/info?id=62&reset=1">link</a>) <br>
             London Mathematical Society, UK (online) </li>
-          <li> May 2021: Workshop on Sino-German Cooperation Projects in Combinatorics <br>
+          <li> May 2021: <b>Workshop on Sino-German Cooperation Projects in Combinatorics</b> <br>
             SUSTech, Shenzhen, China </li>
-          <li> January 2021: Workshop on Group Actions and Transitive Graphs <br>
+          <li> January 2021: <b>Workshop on Group Actions and Transitive Graphs</b> <br>
             Yunnan University, Kunming, China </li>
-          <li> October 2020: Workshop on Combinatorics and Graph Theory <br>
+          <li> October 2020: <b>Workshop on Combinatorics and Graph Theory</b> <br>
             SUSTech, Shenzhen, China </li>
-          <li> September 2019: International Conference on Algebraic Combinatorics <br>
+          <li> September 2019: <b>International Conference on Algebraic Combinatorics</b> <br>
             Jiaozuo, China </li>
-          <li> October 2018: The Third International Conference on Group Actions and Transitive Graphs <br>
+          <li> October 2018: <b>The Third International Conference on Group Actions and Transitive Graphs</b> <br>
             SUSTech, Shenzhen, China </li>
           </ul>
     </div>
