--- a/visits.html
+++ b/visits.html
@@ -72,7 +72,7 @@
     <p>
       <div class="list">
         <ul>
-          <li> December 2021: <b>43rd Australasian Combinatorics Conference</b> <br>
+          <li> December 2021: <b>43rd Australasian Combinatorics Conference</b> (<a href="https://43acc.ms.unimelb.edu.au/">link</a>) <br>
             University of Melbourne, Australia (online)</li>
           <li> November 2021: <b>Groups, Graphs and Combinatorics</b> <br>
             SUSTech, Shenzhen, China (online) </li>
