--- a/research.html
+++ b/research.html
@@ -68,10 +68,12 @@
           <li> <i>On valency problems of Saxl graphs</i> <br>
               joint with J. Chen <br>
             35 pages, <b>Journal of Group Theory</b> <br>
+            First published online: 26 December 2020<br>
                 <a href="https://arxiv.org/abs/2012.13747">arXiv</a> | <a href="https://doi.org/10.1515/jgth-2021-0123">doi: 10.1515/jgth-2021-0123</a> </li>
           <li> <i>On the Saxl graphs of primitive groups with soluble stabilisers</i> <br>
               joint with T.C. Burness <br>
                 submitted, arXiv:2105.11861 <br>
+            First published online: 25 May 2021<br>
                 <a href="https://arxiv.org/abs/2105.11861">arXiv</a> </li>
           </ol>
   </div>
