--- a/talks.html
+++ b/talks.html
@@ -58,7 +58,9 @@
       <p>
      <div class="list">
        <ul>
-         <li> 8th November: <b> On the Saxl graphs of primitive groups </b> <br>
+         <li> 14th November: <b> Regular suborbits of finite primitive groups </b> <br>
+           Groups, Graphs and Combinatorics, SUSTech </li>
+         <li> 8th November: <b> Base-two primitive groups and Saxl graphs </b> <br>
            LMS Graduate Student Meeting Winter 2021 </li>
        <li> 21st May: <b> Groups, graphs and transitivity </b> (<a href="Transitive graphs_210521.pdf">slides</a>) <br>
               Junior Algebra Colloquium, UoB </li>
