--- a/visits.html
+++ b/visits.html
@@ -76,7 +76,7 @@
             University of Melbourne, Australia (online)</li>
           <li> November 2021: <b>Groups, Graphs and Combinatorics</b> <br>
             SUSTech, Shenzhen, China (online) </li>
-          <li> November 2021: <b>LMS Graduate Student Meeting Winter 2021</b> (<a href="https://www.lms.ac.uk/civicrm/event/info?id=62&reset=1">link</a>) <br>
+          <li> November 2021: <b>LMS Graduate Student Meeting Winter 2021</b> (<a href="https://www.lms.ac.uk/events/london-mathematical-society-virtual-graduate-student-meeting-2021">link</a>) <br>
             London Mathematical Society, UK (online) </li>
           <li> May 2021: <b>Workshop on Sino-German Cooperation Projects in Combinatorics</b> <br>
             SUSTech, Shenzhen, China </li>
