--- a/research.html
+++ b/research.html
@@ -79,6 +79,14 @@
   
   
   <h3> Theses </h3>
+  
+  <p>
+      <div class="list">
+        <ul>
+          <li> On valency problems of Saxl graphs of almost simple primitive groups with soluble stabilisers <br>
+            Supervisor: Professor Cai Heng Li<br>
+            Undergraduate thesis
+          </li>
  
     
   </div>
