--- a/research.html
+++ b/research.html
@@ -78,14 +78,14 @@
   </p>
   
   
-  <h3> Theses </h3>
+  <h3> Thesis </h3>
   
   <p>
       <div class="list">
         <ul>
-          <li> On valency problems of Saxl graphs of almost simple primitive groups with soluble stabilisers <br>
+          <li> <i>On valency problems of Saxl graphs of almost simple primitive groups with soluble stabilisers</i> (<a href="On Valency Problems of Saxl Graphs of Almost Simple Primitive Groups with Soluble Stabilise.pdf">pdf</a><br>
             Supervisor: Professor Cai Heng Li<br>
-            Undergraduate thesis
+            Undergraduate thesis, SUSTech
           </li>
  
     
