--- a/research.html
+++ b/research.html
@@ -81,12 +81,15 @@
   <h3> Thesis </h3>
   
   <p>
-      <div class="list">
-        <ul>
-          <li> <i>On valency problems of Saxl graphs of almost simple primitive groups with soluble stabilisers</i> (<a href="On Valency Problems of Saxl Graphs of Almost Simple Primitive Groups with Soluble Stabilise.pdf">pdf</a><br>
+      <div class="desc">
+        <ol>
+          <li> <i>On valency problems of Saxl graphs of almost simple primitive groups with soluble stabiliser</i> (<a href="On Valency Problems of Saxl Graphs of Almost Simple Primitive Groups with Soluble Stabilise.pdf">pdf</a><br>
             Supervisor: Professor Cai Heng Li<br>
             Undergraduate thesis, SUSTech
           </li>
+        </ol>
+  </div>
+  </p>
  
     
   </div>
