--- a/research.html
+++ b/research.html
@@ -83,7 +83,7 @@
   <p>
       <div class="desc">
         <ol>
-          <li> <i>On valency problems of Saxl graphs of almost simple primitive groups with soluble stabiliser</i> (<a href="On Valency Problems of Saxl Graphs of Almost Simple Primitive Groups with Soluble Stabilise.pdf">pdf</a><br>
+          <li> <i>On valency problems of Saxl graphs of almost simple primitive groups with soluble stabiliser</i> (<a href="On Valency Problems of Saxl Graphs of Almost Simple Primitive Groups with Soluble Stabilise.pdf">pdf</a>)<br>
             Supervisor: Professor Cai Heng Li<br>
             Undergraduate thesis, SUSTech
           </li>
