--- a/research.html
+++ b/research.html
@@ -84,7 +84,7 @@
       <div class="desc">
         <ol>
           <li> <i>On valency problems of Saxl graphs of almost simple primitive groups with soluble stabiliser</i> (<a href="On Valency Problems of Saxl Graphs of Almost Simple Primitive Groups with Soluble Stabilise.pdf">pdf</a>)<br>
-            Supervisor: Professor Cai Heng Li<br>
+            Supervisor: <a href="https://research-repository.uwa.edu.au/en/persons/cai-heng-li">Professor Cai Heng Li</a><br>
             Undergraduate thesis, SUSTech
           </li>
         </ol>
