--- a/visits.html
+++ b/visits.html
@@ -71,6 +71,7 @@
     <p>
       <div class="list">
         <ul>
+          <h4> 2021 </h3>
           <li> December 2021: <b>43rd Australasian Combinatorics Conference</b> (<a href="https://43acc.ms.unimelb.edu.au/">link</a>) <br>
             University of Melbourne, Australia (online)</li>
           <li> November 2021: <b>Groups, Graphs and Combinatorics</b> <br>
@@ -79,6 +80,7 @@
             London Mathematical Society, UK (online) </li>
           <li> January 2021: <b>Workshop on Group Actions and Transitive Graphs</b> <br>
             Yunnan University, Kunming, China </li>
+          <h4> Before 2021 </h4>
           <li> October 2020: <b>Workshop on Combinatorics and Graph Theory</b> <br>
             SUSTech, Shenzhen, China </li>
           <li> September 2019: <b>International Conference on Algebraic Combinatorics</b> <br>
