--- a/visits.html
+++ b/visits.html
@@ -80,7 +80,7 @@
             London Mathematical Society, UK (online) </li>
           <li> January 2021: <b>Workshop on Group Actions and Transitive Graphs</b> <br>
             Yunnan University, Kunming, China </li>
-          <h4> Before 2021 </h4> <br>
+          <br><h4> Before 2021 </h4> <br>
           <li> October 2020: <b>Workshop on Combinatorics and Graph Theory</b> <br>
             SUSTech, Shenzhen, China </li>
           <li> September 2019: <b>International Conference on Algebraic Combinatorics</b> <br>
