--- a/index.html
+++ b/index.html
@@ -72,9 +72,13 @@
 
 
       <p> 
-        Currently, I'm a postgraduate researcher (PhD student) at the University of Bristol under the supervision of <a href="https://seis.bristol.ac.uk/~tb13602/">Professor Tim Burness</a> and supported by <a href="https://www.bristol.ac.uk/students/support/finances/scholarships/china-scholarship-council/">China Scholarship Council</a>. My main interest of research is in group theory, especially in permutation groups and related structures in combinatorics.
+        Currently, I'm a postgraduate researcher (PhD student) at the University of Bristol (UoB) under the supervision of <a href="https://seis.bristol.ac.uk/~tb13602/">Professor Tim Burness</a> and supported by <a href="https://www.bristol.ac.uk/students/support/finances/scholarships/china-scholarship-council/">China Scholarship Council</a>. 
         </p>
     
+    <p> 
+      From 2016 to 2020, I was an undergraduate student at Southern University of Science and Technology (SUSTech) in China, supervised by Professor Cai Heng Li.
+    </p>
+
 
   
 
