--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </p>
     
     <p> 
-      From 2016 to 2020, I was an undergraduate student at Southern University of Science and Technology (SUSTech) in China, supervised by Professor Cai Heng Li.
+      From 2016 to 2020, I was an undergraduate student at Southern University of Science and Technology (SUSTech) in China, supervised by <a href="https://research-repository.uwa.edu.au/en/persons/cai-heng-li">Professor Cai Heng Li</a>.
     </p>
 
 
