--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 
       <p> 
-        Currently, I'm a postgraduate researcher (PhD student) at the University of Bristol (UoB) under the supervision of <a href="https://seis.bristol.ac.uk/~tb13602/">Professor Tim Burness</a> and supported by <a href="https://www.bristol.ac.uk/students/support/finances/scholarships/china-scholarship-council/">China Scholarship Council</a>. 
+        Currently, I'm a postgraduate researcher (PhD student) at the <a href="https://www.bristol.ac.uk/">University of Bristol</a> (UoB) under the supervision of <a href="https://seis.bristol.ac.uk/~tb13602/">Professor Tim Burness</a> and supported by <a href="https://www.bristol.ac.uk/students/support/finances/scholarships/china-scholarship-council/">China Scholarship Council</a>. 
         </p>
     
     <p> 
