--- a/teaching.html
+++ b/teaching.html
@@ -51,7 +51,7 @@
       
       <h2> Teaching </h2>
        <p> </p>
-      <p>I started teaching at a very early age -- when I was a primary school student, my teacher asked me to give some lectures to the whole class. Here I list the teaching experiences since I became an undergraduate.</p>
+      <p>I started teaching at a very early age. Here I list the teaching experiences since I became an undergraduate.</p>
 
       <h3> As a teaching assistant or tutorial leader </h3>
       <p>
