--- a/talks.html
+++ b/talks.html
@@ -58,7 +58,7 @@
       <p>
      <div class="list">
        <ul>
-         <li> 14th November: <b> Regular suborbits of finite primitive groups </b> <br>
+         <li> 14th November: <b> Regular suborbits of finite primitive groups </b> (<a href="SUSTech_211114.pdf">slides</a>)<br>
            Groups, Graphs and Combinatorics, SUSTech </li>
          <li> 8th November: <b> Base-two primitive permutation groups and their Saxl graphs </b> (<a href="LMS_211108.pdf">slides</a>)<br>
            LMS Graduate Student Meeting Winter 2021 </li>
