--- a/talks.html
+++ b/talks.html
@@ -58,6 +58,8 @@
       <p>
      <div class="list">
        <ul>
+         <li> 14th December: <b> Base-two primitive permutation groups and their Saxl graphs </b> <br>
+           43rd Australasian Combinatorics Conference, University of Melbourne </li>
          <li> 14th November: <b> Regular suborbits of finite primitive groups </b> (<a href="SUSTech_211114.pdf">slides</a>)<br>
            Groups, Graphs and Combinatorics, SUSTech </li>
          <li> 8th November: <b> Base-two primitive permutation groups and their Saxl graphs </b> (<a href="LMS_211108.pdf">slides</a>)<br>
