--- a/visits.html
+++ b/visits.html
@@ -51,7 +51,7 @@
       
       <h2> Visits </h2>
      <p> </p>
-    <p> I enjoy discussing problems with other mathematicians, especially those who are creative. So I like meeting people via meetings and reseach visits.</p>
+    <p> I enjoy discussing problems with other mathematicians, especially those who are creative. So I like meeting people via conferences and research visits.</p>
 
     <h3> Research visits </h3>
     
