--- a/research.html
+++ b/research.html
@@ -67,7 +67,7 @@
         <ol>
           <li> <i>On valency problems of Saxl graphs</i> <br>
               joint with J. Chen <br>
-            35 pages, <b>Journal of Group Theory</b> <br>
+            35 pages, <b>Journal of Group Theory</b>, to appear <br>
                 <a href="https://arxiv.org/abs/2012.13747">arXiv</a> | <a href="https://doi.org/10.1515/jgth-2021-0123">doi: 10.1515/jgth-2021-0123</a> </li>
           <li> <i>On the Saxl graphs of primitive groups with soluble stabilisers</i> <br>
               joint with T.C. Burness <br>
