--- a/visits.html
+++ b/visits.html
@@ -74,7 +74,7 @@
           <h4> 2022 </h4><br>
           <li> August: <b>Groups St Andrews</b> (<a href="https://groupsstandrews.wp.st-andrews.ac.uk/groups-st-andrews/groups-st-andrews-2022-in-newcastle/">link</a>) <br>
             Newcastle University, UK</li>
-          <li> July: <b>Simple groups, representations and applications</b> (<a href="https://www.newton.ac.uk/event/gr2w02/">link</a>) <br>
+          <li> July: <b>Simple Groups, Representations and Applications</b> (<a href="https://www.newton.ac.uk/event/gr2w02/">link</a>) <br>
             Isaac Newton Institute for Mathematical Sciences, UK</li>
             
             
