--- a/research.html
+++ b/research.html
@@ -75,7 +75,8 @@
                 <a href="https://arxiv.org/abs/2105.11861">arXiv</a> </li>
           <li> <i> On base sizes for primitive groups of product type </i> <br>
               joint with T.C. Burness <br>
-            41 pages, submitted </li>
+            41 pages, submitted, arXiv:2202.02816 <br>
+            <a href="https://arxiv.org/abs/2202.02816">arXiv</a> </li>
           </ol>
   </div>
   </p>
