--- a/research.html
+++ b/research.html
@@ -71,12 +71,12 @@
                 <a href="https://arxiv.org/abs/2012.13747">arXiv</a> | <a href="https://doi.org/10.1515/jgth-2021-0123">doi: 10.1515/jgth-2021-0123</a> </li>
           <li> <i>On the Saxl graphs of primitive groups with soluble stabilisers</i> <br>
               joint with T.C. Burness <br>
-                32 pages, submitted, arXiv:2105.11861 <br>
-                <a href="https://arxiv.org/abs/2105.11861">arXiv</a> </li>
+                32 pages, submitted <br>
+                <a href="https://arxiv.org/abs/2105.11861">arXiv:2105.11861</a> </li>
           <li> <i> On base sizes for primitive groups of product type </i> <br>
               joint with T.C. Burness <br>
-            41 pages, submitted, arXiv:2202.02816 <br>
-            <a href="https://arxiv.org/abs/2202.02816">arXiv</a> </li>
+            41 pages, submitted<br>
+            <a href="https://arxiv.org/abs/2202.02816">arXiv:2202.02816</a> </li>
           </ol>
   </div>
   </p>
