--- a/talks.html
+++ b/talks.html
@@ -58,7 +58,7 @@
       <p>
         <div class="list">
        <ul>
-         <li> 22nd Febrary: <b> Regular orbits of primitive groups on power sets </b> <br>
+         <li> 19th Febrary: <b> Regular orbits of primitive groups on power sets </b> <br>
            SUSTech </li>
        </ul>
       </div>
