--- a/talks.html
+++ b/talks.html
@@ -58,8 +58,8 @@
       <p>
         <div class="list">
        <ul>
-         <li> 19th Febrary: <b> Regular orbits of primitive groups on power sets </b> <br>
-           SUSTech </li>
+         <li> 19th Febrary: <b> Regular orbits of primitive groups on power sets </b> (<a href="RegPower_220219.pdf">slides</a>) <br>
+           Group Theory Seminar, SUSTech </li>
        </ul>
       </div>
       </p>
