--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
     <p> 
       From 2016 to 2020, I was an undergraduate student at <a href="https://www.sustech.edu.cn/en/">Southern University of Science and Technology</a> (SUSTech) supervised by <a href="https://research-repository.uwa.edu.au/en/persons/cai-heng-li">Professor Cai Heng Li</a>.
     </p>
+    
+    <p>
+      I currently co-host the Group Theory Seminar based at SUSTech. If you are a young group theorist and want give a seminar talk, feel free to contact me by email.
+    </p>
 
 
   
