--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </p>
     
     <p>
-      I currently co-host the Group Theory Seminar based at SUSTech. If you are a young group theorist and want to give a talk, feel free to contact me by email.
+      I currently co-host the Group Theory Seminar based at SUSTech. If you are a young group theorist and want to give a talk, feel free to drop me an email.
     </p>
 
 
