--- a/visits.html
+++ b/visits.html
@@ -71,7 +71,14 @@
     <p>
       <div class="list">
         <ul>
-          <h4> 2021 </h4><br>
+          <h4> 2022 </h4><br>
+          <li> September: <b>Young Group Theorists Workshop</b> (<a href="https://indico.cern.ch/event/1129352/">link</a>) <br>
+            SwissMAP & EPFL, Switzerland </li>
+          <li> August: <b>Group St Andrews</b> (<a href="https://groupsstandrews.wp.st-andrews.ac.uk/groups-st-andrews/groups-st-andrews-2022-in-newcastle/">link</a>) <br>
+            Newcastle University, UK </li>
+          
+          
+          <br><h4> 2021 </h4><br>
           <li> December: <b>43rd Australasian Combinatorics Conference</b> (<a href="https://43acc.ms.unimelb.edu.au/">link</a>) <br>
             University of Melbourne, Australia (online)</li>
           <li> November: <b>Groups, Graphs and Combinatorics</b> <br>
