--- a/visits.html
+++ b/visits.html
@@ -74,7 +74,7 @@
           <h4> 2022 </h4><br>
           <li> September: <b>Young Group Theorists Workshop</b> (<a href="https://indico.cern.ch/event/1129352/">link</a>) <br>
             SwissMAP & EPFL, Switzerland </li>
-          <li> August: <b>Group St Andrews</b> (<a href="https://groupsstandrews.wp.st-andrews.ac.uk/groups-st-andrews/groups-st-andrews-2022-in-newcastle/">link</a>) <br>
+          <li> August: <b>Groups St Andrews</b> (<a href="https://groupsstandrews.wp.st-andrews.ac.uk/groups-st-andrews/groups-st-andrews-2022-in-newcastle/">link</a>) <br>
             Newcastle University, UK </li>
           
           
