--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </p>
     
     <p> 
-      From 2016 to 2020, I was an undergraduate student at <a href="https://www.sustech.edu.cn/en/">Southern University of Science and Technology</a> (SUSTech) supervised by <a href="https://research-repository.uwa.edu.au/en/persons/cai-heng-li">Professor Cai Heng Li</a>.
+      From 2016 to 2020, I was an undergraduate student at the <a href="https://www.sustech.edu.cn/en/">Southern University of Science and Technology</a> (SUSTech) supervised by <a href="https://research-repository.uwa.edu.au/en/persons/cai-heng-li">Professor Cai Heng Li</a>.
     </p>
     
     <p>
