--- a/visits.html
+++ b/visits.html
@@ -73,7 +73,7 @@
         <ul>
           <h4> 2022 </h4><br>
           <li> September: <b>Young Group Theorists Workshop</b> (<a href="https://indico.cern.ch/event/1129352/">link</a>) <br>
-            SwissMAP & EPFL, Switzerland </li>
+            SwissMAP, Les Diablerets, Switzerland </li>
           <li> August: <b>Groups St Andrews</b> (<a href="https://groupsstandrews.wp.st-andrews.ac.uk/groups-st-andrews/groups-st-andrews-2022-in-newcastle/">link</a>) <br>
             Newcastle University, UK </li>
           
