--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </p>
     
     <p>
-      I currently co-organise the <a href="http://www.gtseminar.xyz/index.html">Group Theory Seminar</a> based at SUSTech. If you are a young group theorist and want to give a talk, feel free to drop me an email.
+      I currently co-organise the <a href="http://www.gtseminar.xyz">Group Theory Seminar</a> based at SUSTech. If you are a young group theorist and want to give a talk, feel free to drop me an email.
     </p>
 
 
