--- a/talks.html
+++ b/talks.html
@@ -75,6 +75,8 @@
            Groups, Graphs and Combinatorics, SUSTech </li>
          <li> 8th November: <b> Base-two primitive permutation groups and their Saxl graphs </b> (<a href="LMS_211108.pdf">slides</a>)<br>
            LMS Graduate Student Meeting Winter 2021 </li>
+         <li> 9th October: <b> The distinguishing number of permutation groups </b><br>
+           Group Theory Seminar, SUSTech </li>
        <li> 21st May: <b> Groups, graphs and transitivity </b> (<a href="Transitive graphs_210521.pdf">slides</a>) <br>
               Junior Algebra Colloquium, UoB </li>
        <li> 22nd April: <b> The probabilistic method in group theory </b> (<a href="Prob_210422.pdf">slides</a>) <br>
