--- a/visits.html
+++ b/visits.html
@@ -76,6 +76,8 @@
             SwissMAP, Les Diablerets, Switzerland </li>
           <li> August: <b>Groups St Andrews</b> (<a href="https://groupsstandrews.wp.st-andrews.ac.uk/groups-st-andrews/groups-st-andrews-2022-in-newcastle/">link</a>) <br>
             Newcastle University, UK </li>
+          <li> July: <b>Groups and Graphs</b><br>
+            Jiangxi University of Science and Technology, China (online) </li>
           <li> July: <b>23rd Postgraduate Group Theory Conference</b> (<a href="https://nms.kcl.ac.uk/miriam.norris/pgtc.html#home">link</a>) <br>
             Imperial College, King’s College and City, University of London, UK </li>
           
