--- a/talks.html
+++ b/talks.html
@@ -42,7 +42,7 @@
       <li> <a href="index.html">Homepage</a>  </li>
       <li> <a href="research.html">Research</a>  </li>
       <li> <a href="teaching.html">Teaching</a>  </li>
-      <li> <a href="visits.html">Visits</a>  </li>
+      <li> <a href="meetings.html">Meetings</a>  </li>
       <li> <a href="talks.html">Talks</a>  </li>
     </ul>
   </div>
