--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div class="column left">
         <! 导航栏>
         <ul>
-            <li><a>导航栏1</a></li>
-            <li><a>导航栏2</a></li>
+            <li><a>Home</a></li>
+            <li><a>Research</a></li>
         </ul>
     </div>
 
