--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h2>About</h2>
         
         <p>
-            Currently, I am a postgraduate researcher (PhD student) at the <a href="https://www.bristol.ac.uk/">University of Bristol</a> (UoB) in the UK supervised by <a href="https://seis.bristol.ac.uk/~tb13602/"Professor Tim Burness</a> and supported by <a href="http://www.bristol.ac.uk/students/support/finances/scholarships/china-scholarship-council/">China Scholarship Council</a>.
+            Currently, I am a postgraduate researcher (PhD student) at the <a href="https://www.bristol.ac.uk/">University of Bristol</a> (UoB) in the UK supervised by <a href="https://seis.bristol.ac.uk/~tb13602/">Professor Tim Burness</a> and supported by <a href="http://www.bristol.ac.uk/students/support/finances/scholarships/china-scholarship-council/">China Scholarship Council</a>.
         </p>
         
         <p>
