--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </p>
         
         <p>
-            I currently co-organise the <a href="https://www.gtseminar.xyz/index.html">Group Theory Seminar</a> based at SUSTech. If you are a young group theorist and want to give a talk, please drop an email to me.
+            I currently co-organise the <a href="https://www.gtseminar.xyz/index.html">Group Theory Seminar</a> based at SUSTech. If you are a young group theorist and want to give a talk, feel free to drop me an email.
         </p>
 
 
