--- a/meetings.html
+++ b/meetings.html
@@ -25,11 +25,11 @@
     <div class="column left">
         <! 导航栏>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="research.html">Research</a></li>
-            <li><a href="meetings.html">Meetings</a></li>
-            <li><a href="talks.html">Talks</a></li>
-            <li><a href="teaching.html">Teaching</a></li>
+            <lin><a href="index.html">Home</a></lin>
+            <lin><a href="research.html">Research</a></lin>
+            <lin><a href="meetings.html">Meetings</a></lin>
+            <lin><a href="talks.html">Talks</a></lin>
+            <lin><a href="teaching.html">Teaching</a></lin>
         </ul>
     </div>
 
@@ -65,7 +65,6 @@
   
     <p>
       <div class="list">
-        <ul>
           <h4> 2022 </h4><br>
           <li> September: <b>Young Group Theorists Workshop</b> (<a href="https://indico.cern.ch/event/1129352/">link</a>) <br>
             SwissMAP, Les Diablerets, Switzerland </li>
@@ -96,7 +95,6 @@
             Jiaozuo, China </li>
           <li> October 2018: <b>The Third International Conference on Group Actions and Transitive Graphs</b> <br>
             SUSTech, Shenzhen, China </li>
-          </ul>
     </div>
     </p>
   
