--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <div class="column left">
         <! 导航栏>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="research.html">Research</a></li>
-            <li><a href="meetings.html">Meetings</a></li>
-            <li><a href="talks.html">Talks</a></li>
-            <li><a href="teaching.html">Teaching</a></li>
+            <lin><a href="index.html">Home</a></lin>
+            <lin><a href="research.html">Research</a></lin>
+            <lin><a href="meetings.html">Meetings</a></lin>
+            <lin><a href="talks.html">Talks</a></lin>
+            <lin><a href="teaching.html">Teaching</a></lin>
         </ul>
     </div>
 
