--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         
         <h2>Contact</h2>
         <p>
-            <b>Email:</b> hy.huang@bristol.ac.uk<br>
-            <b>Phone:</b> +44 (0)757 995 6791<br>
-            <b>Address:</b> <a href="http://www.bristol.ac.uk/maths/">School of Mathematics</a>, <a href="https://www.bristol.ac.uk/">University of Bristol</a>, BS1 8UG, UK<br>
-            <b>Office:</b> 1.17A Fry Building, BS1 8UG<br>
+            <b>Email:</b> hy.huang@bristol.ac.uk<br><br>
+            <b>Phone:</b> +44 (0)757 995 6791<br><br>
+            <b>Address:</b> <a href="http://www.bristol.ac.uk/maths/">School of Mathematics</a>, <a href="https://www.bristol.ac.uk/">University of Bristol</a>, BS1 8UG, UK<br><br>
+            <b>Office:</b> 1.17A Fry Building, BS1 8UG<br><br>
             <b>Links:</b> <a href="https://arxiv.org/a/huang_h_8.html">arXiv</a>, <a href="https://orcid.org/0000-0003-1457-1026">ORCID</a>, <a href="https://www.researchgate.net/profile/Hong-Yi-Huang-4">Researchgate</a>, <a href="https://scholar.google.com/citations?user=RHJOsxEAAAAJ&hl=en">Google Scholar</a>
         </p>
         
