--- a/research.html
+++ b/research.html
@@ -79,7 +79,7 @@
       <div class="desc">
         <ol>
           <li> <i>On valency problems of Saxl graphs of almost simple primitive groups with soluble stabiliser</i> (<a href="On Valency Problems of Saxl Graphs of Almost Simple Primitive Groups with Soluble Stabilise.pdf">pdf</a>)<br>
-            Supervisor: <a href="https://research-repository.uwa.edu.au/en/persons/cai-heng-li">Professor Cai Heng Li</a><br>
+            Supervisor: <a href="https://faculty.sustech.edu.cn/lich/en/">Professor Cai Heng Li</a><br>
             Undergraduate thesis, SUSTech (2020)
           </li>
         </ol>
