--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@
 
     <div class="column left">
         <! 导航栏>
-        <ul>
+        <ul class="one">
             <lin><a href="index.html">Home</a></lin>
             <lin><a href="research.html">Research</a></lin>
             <lin><a href="meetings.html">Meetings</a></lin>
@@ -77,12 +77,14 @@
   <h3> Thesis </h3>
   
   <p>
+      <div class="desc">
         <ol>
           <li> <i>On valency problems of Saxl graphs of almost simple primitive groups with soluble stabiliser</i> (<a href="On Valency Problems of Saxl Graphs of Almost Simple Primitive Groups with Soluble Stabilise.pdf">pdf</a>)<br>
             Supervisor: <a href="https://research-repository.uwa.edu.au/en/persons/cai-heng-li">Professor Cai Heng Li</a><br>
             Undergraduate thesis, SUSTech (2020)
           </li>
         </ol>
+  </div>
   </p>
  
     
