--- a/teaching.html
+++ b/teaching.html
@@ -24,7 +24,7 @@
 
     <div class="column left">
         <! 导航栏>
-        <ul>
+        <ul class="one">
             <lin><a href="index.html">Home</a></lin>
             <lin><a href="research.html">Research</a></lin>
             <lin><a href="meetings.html">Meetings</a></lin>
